--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
-index.file=index.php
+copy.src.files=false
+copy.src.target=/var/www/wincart
 run.as=LOCAL
-url=http://wincart-withzend/
+url=http://wincart/
