--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -5,22 +5,12 @@ resources.frontController.params.displayExceptions = 1
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
+
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.plugins.acl = "CMS_Controller_Plugin_Acl"
 resources.frontController.defaultControllerName = "page"
-resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
-resources.modules[] = ""
-contact.resources.frontController.defaultControllerName = "index"
-resources.db.adapter = "pdo_mysql"
-resources.db.params.host = "localhost"
-;resources.db.params.username = "win_cart_db"
-;resources.db.params.password = "saqibm"
-;resources.db.params.dbname = "win_cart_db"
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-resources.db.params.username = "root"
-resources.db.params.password = "aaa"
-resources.db.params.dbname = "testas1"
-resources.db.isDefaultTableAdapter = true
+
+;Cache settings
 resources.cache.frontEnd = core
 resources.cache.backEnd = file
 resources.cache.frontEndOptions.lifetime = 1200
@@ -41,4 +31,3 @@ phpSettings.display_errors = 1
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
-resources.db.params.profiler = true
