--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,84 +1,33 @@
 [production]
-phpSettings.display_startup_errors = "0"
-phpSettings.display_errors = "0"
-resources.frontController.params.displayExceptions = "1"
-resources.frontController.controllerDirectory = "APPLICATION_PATH/controllers"
+phpSettings.display_startup_errors = 0
+phpSettings.display_errors = 0
+resources.frontController.params.displayExceptions = 1
+includePaths.library = APPLICATION_PATH "/../library"
+bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
+bootstrap.class = "Bootstrap"
+
+resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.plugins.acl = "CMS_Controller_Plugin_Acl"
 resources.frontController.defaultControllerName = "page"
-resources.db.adapter = "PDO_MYSQL"
-resources.db.params.host = "localhost"
-resources.db.params.database = "test"
-resources.db.params.username = "root"
-resources.db.params.password = ""
-resources.cache.frontEnd = "core"
-resources.cache.backEnd = "file"
-resources.cache.frontEndOptions.lifetime = "1200"
-resources.cache.frontEndOptions.automatic_serialization = "1"
-resources.cache.backEndOptions.lifetime = "3600"
-resources.cache.backEndOptions.cache_dir = "APPLICATION_PATH/../cache"
-resources.layout.layoutPath = "APPLICATION_PATH/layouts/scripts"
-includePaths.library = "APPLICATION_PATH/../library"
-bootstrap.path = "APPLICATION_PATH/Bootstrap.php"
-bootstrap.class = "Bootstrap"
-pluginPaths.CMS_Application_Resource = "APPLICATION_PATH/../library/CMS/Application/Resource"
 
-[staging]
-phpSettings.display_startup_errors = "0"
-phpSettings.display_errors = "0"
-resources.frontController.params.displayExceptions = "1"
-resources.frontController.controllerDirectory = "APPLICATION_PATH/controllers"
-resources.frontController.plugins.acl = "CMS_Controller_Plugin_Acl"
-resources.frontController.defaultControllerName = "page"
-resources.db.adapter = "PDO_MYSQL"
-resources.cache.frontEnd = "core"
-resources.cache.backEnd = "file"
-resources.cache.frontEndOptions.lifetime = "1200"
-resources.cache.frontEndOptions.automatic_serialization = "1"
-resources.cache.backEndOptions.lifetime = "3600"
-resources.cache.backEndOptions.cache_dir = "APPLICATION_PATH/../cache"
-resources.layout.layoutPath = "APPLICATION_PATH/layouts/scripts"
-includePaths.library = "APPLICATION_PATH/../library"
-bootstrap.path = "APPLICATION_PATH/Bootstrap.php"
-bootstrap.class = "Bootstrap"
-pluginPaths.CMS_Application_Resource = "APPLICATION_PATH/../library/CMS/Application/Resource"
+;Cache settings
+resources.cache.frontEnd = core
+resources.cache.backEnd = file
+resources.cache.frontEndOptions.lifetime = 1200
+resources.cache.frontEndOptions.automatic_serialization = true
+resources.cache.backEndOptions.lifetime = 3600
+resources.cache.backEndOptions.cache_dir = APPLICATION_PATH "/../cache"
+pluginPaths.CMS_Application_Resource = APPLICATION_PATH "/../library/CMS/Application/Resource"
 
-[testing]
-phpSettings.display_startup_errors = "1"
-phpSettings.display_errors = "1"
-resources.frontController.params.displayExceptions = "1"
-resources.frontController.controllerDirectory = "APPLICATION_PATH/controllers"
-resources.frontController.plugins.acl = "CMS_Controller_Plugin_Acl"
-resources.frontController.defaultControllerName = "page"
-resources.db.adapter = "PDO_MYSQL"
-resources.cache.frontEnd = "core"
-resources.cache.backEnd = "file"
-resources.cache.frontEndOptions.lifetime = "1200"
-resources.cache.frontEndOptions.automatic_serialization = "1"
-resources.cache.backEndOptions.lifetime = "3600"
-resources.cache.backEndOptions.cache_dir = "APPLICATION_PATH/../cache"
-resources.layout.layoutPath = "APPLICATION_PATH/layouts/scripts"
-includePaths.library = "APPLICATION_PATH/../library"
-bootstrap.path = "APPLICATION_PATH/Bootstrap.php"
-bootstrap.class = "Bootstrap"
-pluginPaths.CMS_Application_Resource = "APPLICATION_PATH/../library/CMS/Application/Resource"
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 
-[development]
-phpSettings.display_startup_errors = "1"
-phpSettings.display_errors = "1"
-resources.frontController.params.displayExceptions = "1"
-resources.frontController.controllerDirectory = "APPLICATION_PATH/controllers"
-resources.frontController.plugins.acl = "CMS_Controller_Plugin_Acl"
-resources.frontController.defaultControllerName = "page"
-resources.db.adapter = "PDO_MYSQL"
-resources.cache.frontEnd = "core"
-resources.cache.backEnd = "file"
-resources.cache.frontEndOptions.lifetime = "1200"
-resources.cache.frontEndOptions.automatic_serialization = "1"
-resources.cache.backEndOptions.lifetime = "3600"
-resources.cache.backEndOptions.cache_dir = "APPLICATION_PATH/../cache"
-resources.layout.layoutPath = "APPLICATION_PATH/layouts/scripts"
-includePaths.library = "APPLICATION_PATH/../library"
-bootstrap.path = "APPLICATION_PATH/Bootstrap.php"
-bootstrap.class = "Bootstrap"
-pluginPaths.CMS_Application_Resource = "APPLICATION_PATH/../library/CMS/Application/Resource"
 
+[staging : production]
+
+[testing : production]
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+
+[development : production]
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
