--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,33 +1,18 @@
 [production]
-phpSettings.display_startup_errors = 0
-phpSettings.display_errors = 0
-resources.frontController.params.displayExceptions = 1
-includePaths.library = APPLICATION_PATH "/../library"
-bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
-bootstrap.class = "Bootstrap"
-
+phpSettings.display_startup_errors = "1"
+phpSettings.display_errors = "1"
+resources.frontController.params.displayExceptions = "1"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.plugins.acl = "CMS_Controller_Plugin_Acl"
 resources.frontController.defaultControllerName = "page"
-
-;Cache settings
-resources.cache.frontEnd = core
-resources.cache.backEnd = file
-resources.cache.frontEndOptions.lifetime = 1200
-resources.cache.frontEndOptions.automatic_serialization = true
-resources.cache.backEndOptions.lifetime = 3600
+resources.cache.frontEnd = "core"
+resources.cache.backEnd = "file"
+resources.cache.frontEndOptions.lifetime = "1200"
+resources.cache.frontEndOptions.automatic_serialization = "1"
+resources.cache.backEndOptions.lifetime = "3600"
 resources.cache.backEndOptions.cache_dir = APPLICATION_PATH "/../cache"
-pluginPaths.CMS_Application_Resource = APPLICATION_PATH "/../library/CMS/Application/Resource"
-
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
-
-
-[staging : production]
-
-[testing : production]
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
-
-[development : production]
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
+includePaths.library = APPLICATION_PATH "/../library"
+bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
+bootstrap.class = "Bootstrap"
+pluginPaths.CMS_Application_Resource = APPLICATION_PATH "/../library/CMS/Application/Resource"
